mark minor changes

--- a/3.5-classifying-movie-reviews.ipynb
+++ b/3.5-classifying-movie-reviews.ipynb
@@ -1488,7 +1488,7 @@
     }
    ],
    "source": [
-    "x_val = train_x[15000:] \n",
+    "x_val = train_x[15000:] ##validation\n",
     "partial_train_x = train_x[:15000] \n",
     "\n",
     "y_val = train_y[15000:]\n",
