--- a/5.1-introduction-to-convnets.ipynb
+++ b/5.1-introduction-to-convnets.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "'2.0.8'"
+       "'2.2.4'"
       ]
      },
      "execution_count": 1,
@@ -126,9 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model.add(layers.Flatten())\n",
@@ -224,21 +222,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 8s - loss: 0.1766 - acc: 0.9440     \n",
+      "60000/60000 [==============================] - 21s 347us/step - loss: 0.1741 - acc: 0.9453\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0462 - acc: 0.9855     \n",
+      "60000/60000 [==============================] - 20s 333us/step - loss: 0.0479 - acc: 0.9851\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0322 - acc: 0.9902     \n",
+      "60000/60000 [==============================] - 21s 344us/step - loss: 0.0338 - acc: 0.9897\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0241 - acc: 0.9926     \n",
+      "60000/60000 [==============================] - 21s 346us/step - loss: 0.0262 - acc: 0.9920\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0187 - acc: 0.9943     \n"
+      "60000/60000 [==============================] - 20s 330us/step - loss: 0.0203 - acc: 0.9937\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fbd9c4cd828>"
+       "<keras.callbacks.History at 0xb356d9cf8>"
       ]
      },
      "execution_count": 7,
@@ -269,7 +267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 9536/10000 [===========================>..] - ETA: 0s"
+      "10000/10000 [==============================] - 1s 135us/step\n"
      ]
     }
    ],
@@ -285,7 +283,7 @@
     {
      "data": {
       "text/plain": [
-       "0.99129999999999996"
+       "0.9911"
       ]
      },
      "execution_count": 9,
@@ -322,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
