--- a/2.1-a-first-look-at-a-neural-network.ipynb
+++ b/2.1-a-first-look-at-a-neural-network.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "'2.0.8'"
+       "'2.2.4'"
       ]
      },
      "execution_count": 1,
@@ -62,10 +62,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
+      "11493376/11490434 [==============================] - 1s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.datasets import mnist\n",
     "\n",
@@ -224,9 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from keras import models\n",
@@ -266,9 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "network.compile(optimizer='rmsprop',\n",
@@ -289,9 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_images = train_images.reshape((60000, 28 * 28))\n",
@@ -311,9 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from keras.utils import to_categorical\n",
@@ -340,21 +339,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 2s - loss: 0.2577 - acc: 0.9245     \n",
+      "60000/60000 [==============================] - 4s 62us/step - loss: 0.2554 - acc: 0.9274\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 1s - loss: 0.1042 - acc: 0.9690     \n",
+      "60000/60000 [==============================] - 3s 52us/step - loss: 0.1035 - acc: 0.9694\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0687 - acc: 0.9793     \n",
+      "60000/60000 [==============================] - 3s 54us/step - loss: 0.0683 - acc: 0.9795\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0508 - acc: 0.9848     \n",
+      "60000/60000 [==============================] - 3s 54us/step - loss: 0.0506 - acc: 0.9851: 0s - loss: 0.0508 - acc: 0.98\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0382 - acc: 0.9890     \n"
+      "60000/60000 [==============================] - 3s 55us/step - loss: 0.0382 - acc: 0.9888\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fce5fed5fd0>"
+       "<keras.callbacks.History at 0x10bfe9cf8>"
       ]
      },
      "execution_count": 13,
@@ -385,7 +384,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 9536/10000 [===========================>..] - ETA: 0s"
+      "10000/10000 [==============================] - 0s 35us/step\n"
      ]
     }
    ],
@@ -402,7 +401,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_acc: 0.9777\n"
+      "test_acc: 0.9769\n"
      ]
     }
    ],
@@ -425,6 +424,13 @@
     "going on behind the scenes. You will learn about \"tensors\", the data-storing objects going into the network, about tensor operations, which \n",
     "layers are made of, and about gradient descent, which allows our network to learn from its training examples."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -443,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
